# ld40_more_is_worse

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.org
data/fonts/: dejavu_sans_18px.fnt  droid_sans_18px.fnt  mono.fnt  roboto_slab_18px.fnt  small.fnt  small_bold.fnt
data/images/: items1.xcf
src/: factories.cpp  factories.hpp  game.cpp  game.hpp  game_state.hpp  game_types.hpp  gl.cpp  gl.hpp  items.cpp  items.hpp  line_shader.cpp  main.cpp  maths.cpp  maths.hpp  maths_types.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_line.cpp  shader_line.hpp  shader_textured.cpp  shader_textured.hpp  sound.cpp  sprites.cpp  sprites.hpp  tasks.cpp  tasks.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp  texture_xcf.cpp  texture_xcf.hpp  to_string.cpp  to_string.hpp  utils.cpp  utils.hpp  vertex.cpp  vertex.hpp
